install_data('afpstats',
              install_dir : get_option('bindir'))

install_data('apple_dump',
              install_dir : get_option('bindir'))

install_data('asip-status.pl',
              install_dir : get_option('bindir'))

install_data('fce_ev_script.sh',
              install_dir : get_option('bindir'))

install_data('make-casetable.pl',
              install_dir : get_option('bindir'))

install_data('make-precompose.h.pl',
              install_dir : get_option('bindir'))
