headers = [
  'acl.h',
  'adouble.h',
  'afp.h',
  'bstrlib.h',
  'cnid.h',
  'dictionary.h',
  'ea.h',
  'globals.h',
  'hash.h',
  'iniparser.h',
  'list.h',
  'logger.h',
  'netatalk_conf.h',
  'standards.h',
  'uam.h',
  'unicode.h',
  'unix.h',
  'util.h',
  'vfs.h',
  'volume.h']
install_headers(headers, subdir : 'atalk')
