tdb_sources = [
  'check.c',
  'dump.c',
  'error.c',
  'freelist.c',
  'freelistcheck.c',
  'io.c',
  'lock.c',
  'open.c',
  'tdb.c',
  'tdb_private.h',
  'transaction.c',
  'traverse.c']

libtdb = static_library('tdb',
                               tdb_sources,
                               include_directories : inc,
                               install : false)
