libcnid_tdb_sources = [
  'cnid_tdb_add.c',
  'cnid_tdb_close.c',
  'cnid_tdb_delete.c',
  'cnid_tdb_get.c',
  'cnid_tdb_lookup.c',
  'cnid_tdb_open.c',
  'cnid_tdb_resolve.c',
  'cnid_tdb_update.c',
  'cnid_tdb.h']

libcnid_tdb = static_library('cnid_tdb',
                                libcnid_tdb_sources,
                                include_directories : inc,
                                install : false)
